--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <meta
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <meta
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Electron My App</title>
-  </head>
-  <body>
-    <!-- React アプリのマウントポイント -->
-    <div id="root"></div>
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
+  <title>Electron My App</title>
+</head>
+
+<body>
+  <!-- React アプリのマウントポイント -->
+  <div id="root"></div>
+</body>
+
 </html>
