--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-  <title>Electron My App</title>
+  <title>MarkIn</title>
 </head>
 
 <body>
